2009-04-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Visibility and subview transition fixes.

	* src/mb/hd-comp-mgr.h:
	  Added HdCompMgrClient::effect for hd-transition.
	* src/util/hd-transition.h:
	  Added hd_transition_actor_will_go_away().
	* src/util/hd-transition.c (hd_transition_subview, hd_transition_completed):
	  If multiple subview transitions would overlap replace the actors.
	  This is necessary when the client maps a lot of stackable windows
	  at once.  In particular, it help keeping visibilities right when
	  we start managing such clients at startup.
	* src/home/hd-render-manager.c:
	  Added visibility-related debug prints.
	  Added workaround not to hide HdHome when it should be shown.
	    This is necessary when a large window stack is pulled down at once.
	  Use hd_transition_actor_will_go_away().

2009-04-03  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Wait until the real app appears before hiding the switcher when waking up
	an hibernated application.
	Fixes: NB#106572

	* src/home/hd-switcher.c:
	* src/home/hd-task-navigator.c:
	* src/launcher/hd-app-mgr.c:

2009-04-03  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-title-bar.c: Fixed copy/paste bug

2009-04-03  Gordon Williams <gordon.williams@collabora.co.uk>

	Changes for NB#107013 - top-left button shouldn't be blurred for
	non-system-modal dialogs

	* src/home/hd-title-bar.h
	* src/home/hd-title-bar.c: Added FOREGROUND state for when we want
	to raise the top-left button above the blur. Refactored a few arrays
	of bools into an array of flags.
	* src/home/hd-render-manager.c:	update_blur now tells the title bar
	if it should render the top-left button above the blur. status area is
	now added to the foreground group of hd-title-bar

2009-04-03  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home.c (show_edit_button_template,
	  hide_edit_button_template, hd_home_init, hd_home_show_edit_button,