@@ -1,5 +1,14 @@
 2009-04-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
+	* src/home/hd-render-manager.c (hd_render_manager_set_state):
+	  Removed hd_render_manager_return_windows() as it shouldn't be
+	  necessary anymore.
+	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify):
+	  Removed a clutter_actor_hide(), set_visibilities() should be
+	  smart enough now.
+
+2009-04-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
 	Visibility and subview transition fixes.
 
 	* src/mb/hd-comp-mgr.h:
